# Discoordinator

./: Cargo.toml
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: release.yml
src/: command.rs  main.rs
